noinst_PROGRAMS = nv40asm
noinst_LIBRARIES = libnv40.a

nv40asm_SOURCES = source/main.cpp source/parser.cpp source/vpparser.cpp source/fpparser.cpp source/compiler.cpp source/compilerfp.cpp
nv40asm_CPPFLAGS = -I$(srcdir)/include

libnv40_a_SOURCES = source/nv40vertprog.c source/nv40fragprog.c
libnv40_a_CPPFLAGS = -I$(srcdir)/include
